Fix module-path support in Gradle Plugin
Closes #1234